--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -94,9 +94,9 @@ stages:
               tags: |
                 $(tag)
                 latest
-              buildArguments: |
-                NEXT_PUBLIC_SELF_URL=$(NEXT_PUBLIC_SELF_URL)
-                DOTNET_API_BASE_URL=$(DOTNET_API_BASE_URL)
+              arguments: |
+                --build-arg NEXT_PUBLIC_SELF_URL=$(NEXT_PUBLIC_SELF_URL)
+                --build-arg DOTNET_API_BASE_URL=$(DOTNET_API_BASE_URL)
 
           # ---------- run-info ----------
           - script: |
