--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -83,6 +83,12 @@ stages:
                 --target runtime
 
           # ---------- CLIENT ----------
+          - task: Docker@2
+            displayName: Login to Azure Container Registry
+            inputs:
+              command: login
+              containerRegistry: $(dockerRegistryServiceConnection)
+
           - script: |
               docker build \
                 --build-arg NEXT_PUBLIC_SELF_URL="$(NEXT_PUBLIC_SELF_URL)" \
