--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,9 @@ services:
       GitHub__ProjectPat: ${GITHUB_PROJECT_PAT}
       GitHub__ProjectOwnerRepo: "MarkRWolf/Devops"
       GitHub__WebhookSecret: ${GITHUB_REPO_WEBHOOK_SECRET}
+      Azure_ProjectOrganization: "igotzeddm"
+      Azure__ProjectName: "MarkRWolf/Devops"
+      Azure__ProjectPat: ${AZURE_PROJECT_PAT}
     ports: ["8080:5205"]
     volumes:
       - devops_data_protection_keys:/app/dpkeys
