--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -7,11 +7,16 @@ http {
     ""        close;
   }
 
+limit_req_zone $binary_remote_addr zone=api_limit:10m rate=5r/s;
+limit_req_zone $binary_remote_addr zone=root_limit:10m rate=15r/s;
+limit_req_status 429;
+limit_req_log_level notice; 
+
   server {
     listen 80;
     server_name _;
-    keepalive_timeout 86400s;
-    
+    keepalive_timeout 7200s;
+
     location ^~ /WS/workflowHub {
       proxy_pass                https://$API_INTERNAL_HOST;
       proxy_http_version 1.1;
@@ -25,7 +30,7 @@ http {
       proxy_redirect            off;
     }
     
-     location = /API/github/webhook {
+    location = /API/github/webhook {
       proxy_pass         https://$API_INTERNAL_HOST/API/github/webhook;
       proxy_http_version 1.1;
       proxy_ssl_server_name on;
@@ -37,7 +42,8 @@ http {
     }
 
     location ^~ /api/ {
-    proxy_pass         https://$WEB_INTERNAL_HOST;
+      proxy_pass         https://$WEB_INTERNAL_HOST;
+      limit_req zone=api_limit burst=5 nodelay;
       proxy_http_version 1.1;
       proxy_ssl_server_name on;
       proxy_set_header   Host              $WEB_INTERNAL_HOST;
@@ -47,9 +53,31 @@ http {
       proxy_redirect     off;
     }
 
+    location ^~ /_next/ {
+      proxy_pass https://$WEB_INTERNAL_HOST;
+      proxy_http_version 1.1;
+      proxy_ssl_server_name on;
+      proxy_set_header Host $WEB_INTERNAL_HOST;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_redirect off;
+    }
+
+     location = /favicon.ico {
+      proxy_pass https://$WEB_INTERNAL_HOST;
+      proxy_http_version 1.1;
+      proxy_ssl_server_name on;
+      proxy_set_header Host $WEB_INTERNAL_HOST;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_redirect off;
+    }
 
     location / {
       proxy_pass         https://$WEB_INTERNAL_HOST;
+      limit_req zone=root_limit burst=20 nodelay;
       proxy_http_version 1.1;
       proxy_ssl_server_name on;
       proxy_set_header   Host              $WEB_INTERNAL_HOST;
