--- a/.dockerignore
+++ b/.dockerignore
@@ -1,15 +1,14 @@
 **
+
 !Devops/**
 !Devops.Tests/**
-!client/**
-!nginx.conf
-!docker-compose.yml
 !*.sln
 
 **/bin/
 **/obj/
-client/node_modules/
+**/TestResults/
+
 .git/
 .vscode/
-Dockerfile*
-docker-compose*
+.idea/
+.DS_Store
