--- a/k8s/ingressroute.yaml
+++ b/k8s/ingressroute.yaml
@@ -1,41 +1,25 @@
-apiVersion: traefik.io/v1alpha1
-kind: Middleware
-metadata:
-  name: ratelimit-api
-spec:
-  rateLimit:
-    average: 5
-    burst: 5
----
+# k8s/ingressroute.yaml
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
-  name: app-web
+  name: http-redirect
 spec:
   entryPoints:
     - web
   routes:
-    - match: PathPrefix(`/WS/workflowHub`)
+    - match: Host(`devoptics.mark-wolf.com`)
       kind: Rule
+      middlewares:
+        - name: redirect-to-https
       services:
         - name: backend
           port: 5205
-    - match: PathPrefix(`/API`)
-      kind: Rule
-      middlewares:
-        - name: ratelimit-api
-      services:
-        - name: backend
-          port: 5205
-    - match: PathPrefix(`/api`)
-      kind: Rule
-      middlewares:
-        - name: ratelimit-api
-      services:
-        - name: frontend
-          port: 3000
-    - match: PathPrefix(`/_next`) || PathPrefix(`/favicon.ico`) || PathPrefix(`/`)
-      kind: Rule
-      services:
-        - name: frontend
-          port: 3000
+---
+apiVersion: traefik.io/v1alpha1
+kind: Middleware
+metadata:
+  name: redirect-to-https
+spec:
+  redirectScheme:
+    scheme: https
+    permanent: true
