--- a/k8s/backend.yaml
+++ b/k8s/backend.yaml
@@ -11,6 +11,8 @@ spec:
       labels: { app: backend }
     spec:
       serviceAccountName: app-sa
+      nodeSelector:
+        agentpool: user
       containers:
         - name: backend
           image: saasportfolioreg.azurecr.io/backend:staging
