--- a/.github/workflows/backend-vps.yml
+++ b/.github/workflows/backend-vps.yml
@@ -20,31 +20,30 @@ jobs:
       - name: Compute commit tag
         run: echo "SHORT_SHA=$(git rev-parse --short=12 HEAD)" >> $GITHUB_ENV
 
-      - name: Run backend tests in container
+      - name: Build report image and extract test results
         run: |
-          sudo nerdctl --address /run/k3s/containerd/containerd.sock --namespace k8s.io build \
+          sudo nerdctl --address /run/k3s/containerd/containerd.sock -n k8s.io build \
             -f Devops/Dockerfile.jenkins \
             --target report \
-            -t backend-test:$SHORT_SHA .
-          CID=$(sudo nerdctl --address /run/k3s/containerd/containerd.sock --namespace k8s.io create backend-test:$SHORT_SHA)
-          mkdir -p test-results
-          sudo nerdctl --address /run/k3s/containerd/containerd.sock --namespace k8s.io cp "$CID":/test-results.xml test-results/test-results.xml
-          sudo nerdctl --address /run/k3s/containerd/containerd.sock --namespace k8s.io rm "$CID"
+            --output type=local,dest=./test-report-out \
+            .
+          ls -R
+          test -f test-report-out/test-results.xml
 
       - name: Upload backend test report
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: backend-test-results-${{ env.SHORT_SHA }}
-          path: test-results/test-results.xml
+          path: test-report-out/test-results.xml
 
       - name: Build backend runtime image
         run: |
-          sudo nerdctl --address /run/k3s/containerd/containerd.sock --namespace k8s.io build \
+          sudo nerdctl --address /run/k3s/containerd/containerd.sock -n k8s.io build \
             -f Devops/Dockerfile.jenkins \
             --target runtime \
             -t backend:$SHORT_SHA .
-          sudo nerdctl --address /run/k3s/containerd/containerd.sock --namespace k8s.io tag backend:$SHORT_SHA backend:local
+          sudo nerdctl --address /run/k3s/containerd/containerd.sock -n k8s.io tag backend:$SHORT_SHA backend:local
 
       - name: Deploy backend to k3s
         run: |
