--- a/.github/workflows/frontend-vps.yml
+++ b/.github/workflows/frontend-vps.yml
@@ -28,12 +28,12 @@ jobs:
 
       - name: Build frontend image
         run: |
-          sudo nerdctl --address /run/k3s/containerd/containerd.sock --namespace k8s.io build \
+          sudo nerdctl --address /run/k3s/containerd/containerd.sock -n k8s.io build \
             --build-arg NEXT_PUBLIC_SELF_URL=${{ secrets.NEXT_PUBLIC_SELF_URL }} \
             --build-arg DOTNET_API_BASE_URL=${{ secrets.DOTNET_API_BASE_URL }} \
             -t frontend:$SHORT_SHA \
             -f client/Dockerfile client
-          sudo nerdctl --address /run/k3s/containerd/containerd.sock --namespace k8s.io tag frontend:$SHORT_SHA frontend:local
+          sudo nerdctl --address /run/k3s/containerd/containerd.sock -n k8s.io tag frontend:$SHORT_SHA frontend:local
 
       - name: Deploy frontend to k3s
         run: |
